# mobi

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-22-mobi-v1.md
docs/superpowers/specs/: 2026-07-22-mobi-design.md
scripts/: gen-icon.mjs
src/: api.ts  main.ts  render.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  gate.rs  lib.rs  main.rs  model.rs  monitor.rs  sensor.rs  state.rs  tray.rs
