[package]
name = "mobi"
version = "0.1.0"
description = "Menu-bar control plane for the AI agents on your Mac"
authors = ["Karim"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows linker quirk).
name = "mobi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
window-vibrancy = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
